--- a/arch/arm/dts/imx8mq-bio.dts
+++ b/arch/arm/dts/imx8mq-bio.dts
@@ -144,7 +144,7 @@
 		>;
 	};
 
-	pinctrl_i2c2_sn65dsi83: i2c2-sn65dsi83 {
+	pinctrl_sn65dsi83: sn65dsi83grp {
 		fsl,pins = <
 #define GP_I2C2_SN65DSI83_IRQ_REV0	<&gpio4 28 GPIO_ACTIVE_HIGH>
 #define GPIRQ_I2C2_SN65DSI83_REV0	<&gpio4 28 IRQ_TYPE_LEVEL_HIGH>
@@ -922,34 +922,6 @@
 	scl-gpios = GP_I2C2_SCL;
 	sda-gpios = GP_I2C2_SDA;
 	status = "okay";
-
-	mipi_to_lvds: mipi-to-lvds@2c {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		alias = <&mipi_to_lvds>;
-		clocks = <&dsim_clk 0>,
-			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
-		clock-names = "mipi_clk", "pixel_clock";
-		compatible = "ti,sn65dsi83";
-		display = <&lcdif>;
-		display-dsi = <&fb_mipi>;
-		enable-gpios = GP_I2C2_SN65DSI83_EN_REV0, GP_I2C2_SN65DSI83_EN;
-		interrupts-extended = GPIRQ_I2C2_SN65DSI83_REV0, GPIRQ_I2C2_SN65DSI83;
-		interrupts-gpios = GP_I2C2_SN65DSI83_IRQ_REV0, GP_I2C2_SN65DSI83_IRQ;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c2_sn65dsi83>;
-		reg = <0x2c>;
-		spwg;
-		status = "disabled";
-
-		port@0 {
-			reg = <0>;
-
-			lvds_from_panel: endpoint {
-				remote-endpoint = <&panel_to_lvds>;
-			};
-		};
-	};
 };
 
 &i2c3 {
@@ -1173,7 +1145,10 @@
 #endif
 		bus-format = "rgb888";
 		bus-width = <24>;
-		compatible = "panel,simple";
+		clocks = <&dsim_clk 0>,
+			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
+		clock-names = "mipi_clk", "pixel_clock";
+		compatible = "panel,common";
 		delay-power-up = <2>;
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
@@ -1182,8 +1157,11 @@
 		mode-video-burst;
 		panel-height-mm = <136>;
 		panel-width-mm = <217>;
+		pinctrl-names = "sn65dsi83";
+		pinctrl-0 = <&pinctrl_sn65dsi83>;
 		power-supply = <&reg_vref_5v>;
 		reg = <0>;
+		sn65dsi83 = <&mipi_to_lvds>;
 
 		display-timings {
 			t_mipi: t-dsi-default {
@@ -1203,19 +1181,24 @@
 			};
 		};
 
+		mipi_to_lvds: mipi-to-lvds {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			alias = <&mipi_to_lvds>;
+			enable-gpios = GP_I2C2_SN65DSI83_EN_REV0, GP_I2C2_SN65DSI83_EN;
+			i2c-address = <0x2c>;
+			i2c-bus = <&i2c2>;
+			interrupts-extended = GPIRQ_I2C2_SN65DSI83_REV0, GPIRQ_I2C2_SN65DSI83;
+			interrupts-gpios = GP_I2C2_SN65DSI83_IRQ_REV0, GP_I2C2_SN65DSI83_IRQ;
+			spwg;
+			status = "disabled";
+		};
+
 		port@1 {
 			reg = <1>;
 
 			panel1_in: endpoint {
 				remote-endpoint = <&mipi_dsi_bridge_out>;
-			};
-		};
-
-		port@2 {
-			reg = <2>;
-
-			panel_to_lvds: endpoint {
-				remote-endpoint = <&lvds_from_panel>;
 			};
 		};
 	};
